fix dropdown menu not showing

--- a/web/src/components/ast/TopLevelNodeKindView.module.css
+++ b/web/src/components/ast/TopLevelNodeKindView.module.css
@@ -28,8 +28,8 @@
 }
 
 .contentWrapper {
-  overflow-x: auto;
-  overflow-y: clip;
+  overflow-x: visible;
+  overflow-y: visible;
 }
 
 .innerContentWrapper {
